[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0"
md5 = "0.8.0"
rand = "0.9.2"
num_cpus = "1.17.0"

# Possible performance optimisations. Based on https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
